--- a/animation.css
+++ b/animation.css
@@ -95,20 +95,18 @@ button {
     }
 }
 
-
-/* Media query for smaller screens */
 @media (max-width: 768px) {
   .hero-section {
-      height: 300px; /* Reduce height for smaller screens */
-      font-size: 1.5rem; /* Adjust font size */
+      height: 300px; 
+      font-size: 1.5rem; 
   }
 }
 
-/* Media query for very small screens */
+
 @media (max-width: 480px) {
   .hero-section {
-      height: 250px; /* Further reduce height */
-      font-size: 1.2rem; /* Adjust font size */
-      padding: 10px; /* Add padding for better spacing */
+      height: 250px; /
+      font-size: 1.2rem; 
+      padding: 10px;
   }
 }
